_hands-on/infra/manifest/project-a/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-a
  namespace: application
  labels:
    app: project-a
spec:
  selector:
    matchLabels:
      app: project-a
  replicas: 1
  template:
    metadata:
      labels:
        app: project-a
    spec:
      nodeSelector:
        workload: application
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "application"
          effect: "NoSchedule"
      containers:
        - name: project-a
          image: localhost/project-a:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
